force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_Acronym__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Acronym__c</fullName>
    <description>Le sigle (ou &quot;acronyme&quot;) est composé des premières lettres ou syllabes des mots qui composent la dénomination sociale. 
Par exemple «SOPALIN » signifie « Société des papiers-linges ».</description>
    <label>Sigle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>