force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_ActivityDescription__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_ActivityDescription__c</fullName>
    <description>Libellé de l&apos;activité correspondant au code APE 2008.Activité issue de la Nomenclature d&apos;Activités Française (NAF).</description>
    <inlineHelpText>Activity from the French Nomenclature of Activities (NAF).</inlineHelpText>
    <label>Détail APE 2008</label>
    <length>255</length>
    <type>Text</type>
</CustomField>