force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_ActivityTypeAndCode__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_ActivityTypeAndCode__c</fullName>
    <description>Le code APE (activité principale exercée) permet d&apos;identifier la branche d&apos;activité principale de l&apos;entreprise ou du travailleur indépendant. Sa fonction principale est statistique (attribué par l&apos;INSEE). Il est composé de 4 chiffres + 1 lettre, en référence à la nomenclature statistique nationale d&apos;activités française (NAF).</description>
    <inlineHelpText>Code from the French Nomenclature of Activities (NAF).</inlineHelpText>
    <label>APE 2008</label>
    <length>255</length>
    <type>Text</type>
</CustomField>