force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_AuthorityIdAndCity__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_AuthorityIdAndCity__c</fullName>
    <description>N° de gestion interne au greffe du tribunal de commerce gérant le registre. Exemple : 1999B02210
Ville du greffe du tribunal de commerce dont dépend le siège social de l&apos;entreprise. Exemple : Lyon.</description>
    <inlineHelpText>Internal management number at the registry of the commercial court managing the register. Example: 1999B02210
City of the clerk&apos;s office of the commercial court on which the company&apos;s registered office depends. Example: Lyon.</inlineHelpText>
    <label>N° de gestion / Ville</label>
    <length>255</length>
    <type>Text</type>
</CustomField>