force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_BankReferences__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_BankReferences__c</fullName>
    <description>Nom des banques avec lesquelles la société à un compte</description>
    <label>Banques</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>