force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_CapitalInformation__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_CapitalInformation__c</fullName>
    <description>Ressources en numéraire et en nature définitivement apportées à une société anonyme par ses actionnaires au moment de sa création (ou d&apos;une augmentation de capital). La devise varie en fonction du pays.</description>
    <label>Capital social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>