force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_code_ape08__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_code_ape08__c</fullName>
    <label>Code APE2008</label>
    <length>40</length>
    <type>Text</type>
</CustomField>