force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_CollectiveAgreement__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_CollectiveAgreement__c</fullName>
    <description>Convention collective rattachée au code NACE/NAF.</description>
    <inlineHelpText>Reference of the collective agreement estimated by the company according to its activity.</inlineHelpText>
    <label>Convention collective théorique</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>