force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_CommentsOnActivities__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_CommentsOnActivities__c</fullName>
    <description>L&apos;objet social désigne l&apos;ensemble des activités qu&apos;une société entend exercer. L&apos;objet social est défini dans les statuts de la société au moment de la création de celle-ci (peut être modifié ultérieurement par le biais d&apos;une modification des statuts).</description>
    <label>Objet social</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>