force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_CompanyEmail__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_CompanyEmail__c</fullName>
    <description>Adresse mail générique de l&apos;entreprise</description>
    <inlineHelpText>Generic email address of the company</inlineHelpText>
    <label>Email de l&apos;entreprise</label>
    <type>Email</type>
</CustomField>