force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_CompanyStatus__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_CompanyStatus__c</fullName>
    <formula>IF(LOWER(ELLISPHERE__Elli_TCH_Statut__c) == &apos;active&apos;, 
	$Label.ellisphere__company_statusactive, 
	IF(LOWER(ELLISPHERE__Elli_TCH_Statut__c) == &apos;inactive&apos;, 
		$Label.ellisphere__company_statusinactive, 
		$Label.ellisphere__company_statusunknown
	)
)
+ &apos; - &apos; +
IF(LOWER(ELLISPHERE__Elli_TCH_EstablishmentStatus__c) == &apos;active&apos;, 
	$Label.ellisphere__establishment_statusactive, 
	IF(LOWER(ELLISPHERE__Elli_TCH_EstablishmentStatus__c) == &apos;inactive&apos;, 
		$Label.ellisphere__establishment_statusinactive, 
		$Label.ellisphere__company_statusunknown
	)
)</formula>
    <label>Statut</label>
    <type>Text</type>
</CustomField>