force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_cumul_branches__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_cumul_branches__c</fullName>
    <description>Indique le nombre d&apos;établissements disponibles dans Ellisphere</description>
    <label>Nb d&apos;établissements</label>
    <summarizedField>ELLISPHERE__Elli_Branches__c.ELLISPHERE__Elli_Branch_TCH_cumul__c</summarizedField>
    <summaryForeignKey>ELLISPHERE__Elli_Branches__c.ELLISPHERE__Elli_Branch_ParentAccount__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>