force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_cumul_IndirectShareholder__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_cumul_IndirectShareholder__c</fullName>
    <description>Récapitulatif du nombre d&apos;actionnaires indirects (&quot;Groupe&quot;) disponibles dans &quot;Actionnaires&quot;</description>
    <inlineHelpText>Summary of the number of indirect shareholders (&quot;Group&quot;) available in &quot;Shareholders&quot; tab.</inlineHelpText>
    <label>Nb d&apos;actionnaires Groupe disponibles</label>
    <summarizedField>ELLISPHERE__Elli_Shareholder__c.ELLISPHERE__Elli_TCH_Shareho_cumul__c</summarizedField>
    <summaryFilterItems>
        <field>ELLISPHERE__Elli_Shareholder__c.ELLISPHERE__Elli_ShareholderUltimateRank__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>ELLISPHERE__Elli_Shareholder__c.ELLISPHERE__Elli_JctAccShareholder_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>