force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_cumul_IndirectShareholding__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_cumul_IndirectShareholding__c</fullName>
    <description>Récapitulatif du nombre de participations indirectes (&quot;Groupe&quot;) disponibles dans &quot;Participations&quot;</description>
    <inlineHelpText>Summary of the number of indirect shareholdings (&quot;Group&quot;) available in &quot;Shareholdings&quot; tab.</inlineHelpText>
    <label>Nb de participations Groupe disponibles</label>
    <summarizedField>ELLISPHERE__Elli_Shareholding__c.ELLISPHERE__Elli_TCH_sha_holding_cumul__c</summarizedField>
    <summaryFilterItems>
        <field>ELLISPHERE__Elli_Shareholding__c.ELLISPHERE__Elli_ShareholdingUltimateRank__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>ELLISPHERE__Elli_Shareholding__c.ELLISPHERE__Elli_JctAccShareholding_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>