force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_detail_nace08__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_detail_nace08__c</fullName>
    <label>Libellé NACE2008</label>
    <length>255</length>
    <type>Text</type>
</CustomField>