force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_details_ape08__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_details_ape08__c</fullName>
    <label>Libellé APE2008</label>
    <length>255</length>
    <type>Text</type>
</CustomField>