force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_Elllinumber__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Elllinumber__c</fullName>
    <description>Identifiant propre à Ellisphere : &quot;Ellinumber&quot; dans le cas d&apos;un siège et &quot;Ellistab&quot; dans le cas d&apos;un établissement secondaire.</description>
    <inlineHelpText>Ellisphere unique identifier: &quot;Ellinumber&quot; in the case of a head Office and &quot;Ellistab&quot; in the case of other Offices.</inlineHelpText>
    <label>Ellinumber (Obsolète)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>