force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_EstablishmentType__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_EstablishmentType__c</fullName>
    <description>Désigne si l&apos;établissement consulté est le siège social ou un établissement secondaire de l&apos;entreprise.</description>
    <inlineHelpText>Refers to whether the  consulted company is the  Head office or a branch .</inlineHelpText>
    <label>Type d&apos;établissement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>