force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_IdAssocRNA__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_IdAssocRNA__c</fullName>
    <description>Numéro d’identification au Répertoire National des Associations. Fourni lors de la déclaration de création en préfecture.Le greffe des associations procède à l&apos;inscription dans le répertoire national des associations (RNA).Cette inscription donne lieu à une première immatriculation sous la forme d&apos;un numéro RNA (appelé parfois par l&apos;administration &quot;numéro de dossier&quot;), composé d&apos;un W suivi de 9 chiffres. Uniquement en France.</description>
    <inlineHelpText>Official ID of associations registered in the National Register of Associations (RNA).</inlineHelpText>
    <label>Numéro  RNA (Obsolète)</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>