force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_IdFiscal__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_IdFiscal__c</fullName>
    <description>Identifiant type &quot;fiscal&quot;.</description>
    <inlineHelpText>To find out the Legal ID used for each country in this field, please click on the link &quot;See the list of identifiers by country&quot; below.</inlineHelpText>
    <label>Identifiant Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>