force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_IdOther__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_IdOther__c</fullName>
    <description>Identifiant type &quot;Other&quot;. Varie selon les pays (souvent équivalent à un identifiant statistique)</description>
    <inlineHelpText>To find out the Legal ID used for each country in this field, please click on the link &quot;See the list of identifiers by country&quot; below.</inlineHelpText>
    <label>Identifiant Statistique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>