force-app/main/default/objects/Account/fields/ELLISPHERE__ELLI_IdRegister__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__ELLI_IdRegister__c</fullName>
    <description>Identifiant légal de l&apos;entreprise. Varie selon les pays. ex: SIREN pour la France.</description>
    <inlineHelpText>To find out the Legal ID used for each country in this field, please click on the link &quot;See the list of identifiers by country&quot; below.</inlineHelpText>
    <label>Identifiant légal / SIREN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>