force-app/main/default/objects/Account/fields/ELLISPHERE__ELLI_IdRegisterestb2__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__ELLI_IdRegisterestb2__c</fullName>
    <description>Numéro de SIRET.Identifiant d&apos;établissement. Uniquement pour la France.</description>
    <inlineHelpText>The SIRET number is a company ID of 14-digit numeric identifier (first 9 numbers = SIREN number of the legal unit to which the SIRET unit belongs).</inlineHelpText>
    <label>TCH SIRET</label>
    <length>14</length>
    <type>Text</type>
</CustomField>