force-app/main/default/objects/Account/fields/ELLISPHERE__ELLI_IdRegisterestb__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__ELLI_IdRegisterestb__c</fullName>
    <description>Obsolète : ce champ est remplacé par ELLI_IdRegisterestb2__c.</description>
    <label>TCH SIRET (Obsolète)</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>