force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_IdSrc__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_IdSrc__c</fullName>
    <description>Identifiant technique permettant d&apos;appeler le WS pour le rapport approfondi. NE PAS AFFICHER</description>
    <label>TCH_Identifiant interne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>