force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_LegalForm__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_LegalForm__c</fullName>
    <description>Pour la France : Code de niveau III de la nomenclature des catégories juridiques INSEE et Libellé associé à ce code.</description>
    <label>Forme juridique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>