force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_LogoElli__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_LogoElli__c</fullName>
    <formula>IF( 
  NOT(ISBLANK(ELLISPHERE__Elli_IdSrc__c)),
  IMAGE(&apos;/resource/ELLISPHERE__ImagesEllisphere/Ellisphere_images/Logos/20181205_Logo_Ellisphere_2015_long_officiel_30x180.jpg&apos;,&apos;Ellisphere&apos;,20,120),
  &apos;Compte non suivi par Ellisphere&apos;
)</formula>
    <label>Suivi par</label>
    <type>Text</type>
</CustomField>