force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_NACE_08__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_NACE_08__c</fullName>
    <description>Nomenclature statistique des Activités économiques dans la Communauté Européenne (dérivée de la nomenclature internationale CITI). La NAF, nomenclature d&apos;activités française, a la même structure que la NACE afin de faciliter les comparaison (NAF = nomenclature des activités économiques productives, principalement élaborée pour faciliter l&apos;organisation de l&apos;information économique et sociale).</description>
    <inlineHelpText>European activity classification</inlineHelpText>
    <label>NACE 08</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>