force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_OperatingMode__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_OperatingMode__c</fullName>
    <description>Précise le mode d&apos;exploitation du fonds. Valeurs possibles : « Propriétaire-exploitant direct », « Locataire-gérant », « Loueur de fonds »</description>
    <inlineHelpText>Specifies how the fund is to be operated. Possible values: &quot;Direct owner-operator&quot;, &quot;Tenant manager&quot;, &quot;business lease&quot;.</inlineHelpText>
    <label>Mode d&apos;exploitation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>