force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_Premises__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Premises__c</fullName>
    <description>Information qui est le plus souvent déduite des postes de l’actif immobilisé. Valeurs possibles : « Locataire », « Propriétaire des locaux », « Propriétaire du terrain », « Propriétaire Locaux et terrain»</description>
    <inlineHelpText>Information that is most often deducted from fixed assets items. Possible values: &quot;Tenant&quot;, &quot;Premises owner&quot;, &quot;Land owner&quot;, &quot;Premises and land owner&quot;.</inlineHelpText>
    <label>Surface immobilière</label>
    <length>50</length>
    <type>Text</type>
</CustomField>