force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_RegistrationDate__c</fullName>
    <description>Date d&apos;immatriculation de l&apos;entreprise.</description>
    <label>Date immatriculation</label>
    <type>Date</type>
</CustomField>