force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_SiretFormatAuto__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_SiretFormatAuto__c</fullName>
    <description>Ce champ permet un affichage formaté du SIRET (espace entre le 9e et 10e chiffre) afin de mettre en valeur le SIREN.</description>
    <formula>TRIM(LEFT( ELLISPHERE__ELLI_IdRegisterestb2__c ,9)) &amp; &quot; &quot; 

&amp;TRIM(RIGHT( ELLISPHERE__ELLI_IdRegisterestb2__c ,5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The SIRET number is a company ID of 14-digit numeric identifier (first 9 numbers = SIREN number of the legal unit to which the SIRET unit belongs).</inlineHelpText>
    <label>SIRET</label>
    <type>Text</type>
</CustomField>