force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_StockExchangeListed__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_StockExchangeListed__c</fullName>
    <description>Indique le libellé du marché boursier sur lequel l&apos;entreprise est côtée en bourse. Si l&apos;entreprise n&apos;est pas côtée, indique &quot;Non côtée&quot;.</description>
    <label>Cotation en bourse</label>
    <length>50</length>
    <type>Text</type>
</CustomField>