force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_TCH_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_TCH_CountryCode__c</fullName>
    <description>Trigramme du pays utilisé pour l&apos;actualisation du compte et des informations relatives aux comptes</description>
    <label>Code Pays</label>
    <length>3</length>
    <type>Text</type>
</CustomField>