force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_TCH_Statut__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_TCH_Statut__c</fullName>
    <description>Indique le statut du compte : Active / Inactive. Si le statut est &quot;inactive&quot;, l&apos;établissement est fermée. Si il s&apos;agit d&apos;une entreprise, c&apos;est l&apos;entreprise (incluant l&apos;ensemble des établissements) qui est inactive.</description>
    <label>TCH_Statut</label>
    <length>20</length>
    <type>Text</type>
</CustomField>