force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_Tradename__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Tradename__c</fullName>
    <description>Enseigne commerciale (ou Nom commercial)</description>
    <label>Enseigne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>