force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_UpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_UpdateDateTime__c</fullName>
    <description>Date et heure de la dernière actualisation dans Salesforce des données provenant d&apos;Ellisphere</description>
    <inlineHelpText>Date and time of the last update in Salesforce of data from Ellisphere</inlineHelpText>
    <label>Dernière actualisation le</label>
    <type>DateTime</type>
</CustomField>