force-app/main/default/objects/Account/fields/ELLISPHERE__Elli_VatNumber__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_VatNumber__c</fullName>
    <description>Numéro de TVA. Identification fiscale pour toute entreprise redevable de la TVA dans l&apos;Union européenne.</description>
    <inlineHelpText>To find out the Legal ID used for each country in this field, please click on the link &quot;See the list of identifiers by country&quot; below.</inlineHelpText>
    <label>Numéro de TVA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>