force-app/main/default/objects/Account/fields/ELLISPHERE__TCH_Elli_isFromEllisphereLead__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__TCH_Elli_isFromEllisphereLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs technique permettant de déterminer si le compte provient d&apos;une conversion d&apos;une piste créée via le connecteur Ellisphere</description>
    <label>Converti depuis Piste Ellisphere</label>
    <type>Checkbox</type>
</CustomField>