force-app/main/default/objects/Account/fields/ELLISPHERE__TCH_isAutoImport__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__TCH_isAutoImport__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Champs technique permettant de distinguer l&apos;import d&apos;un compte en manuel ou en automatique</description>
    <label>Importation automatique</label>
    <type>Checkbox</type>
</CustomField>