force-app/main/default/objects/Account/fields/N_de_cde_obligatoire_pour_facturation__c.field-meta.xml
<CustomField>
    <fullName>N_de_cde_obligatoire_pour_facturation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N° de cde obligatoire pour facturation</label>
    <type>Checkbox</type>
</CustomField>