force-app/main/default/objects/Account/fields/RessourceAttribuee__c.field-meta.xml
<CustomField>
    <fullName>RessourceAttribuee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource attribuée</label>
    <referenceTo>AssignedResource</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>