force-app/main/default/objects/Account/fields/TECH_dormant__c.field-meta.xml
<CustomField>
    <fullName>TECH_dormant__c</fullName>
    <formula>IF(AND(ISBLANK( ACC_DATE_LAST_CDE__c ),ISBLANK(ACC_DATE_LAST_OPP__c )),&apos;Dormant&apos;, IF((TODAY()- ACC_DATE_LAST_CDE__c)&lt;1095,&apos;Actif&apos;,IF((TODAY()- ACC_DATE_LAST_OPP__c)&lt;1095,&apos;Passif&apos;,&apos;Dormant&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_dormant</label>
    <type>Text</type>
</CustomField>