force-app/main/default/objects/Account/fields/Tech_ProvenancePiste__c.field-meta.xml
<CustomField>
    <fullName>Tech_ProvenancePiste__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cette case à cocher permet de définir qu&apos;un compte provient de la conversion d&apos;une piste.</description>
    <label>Tech_ProvenancePiste</label>
    <type>Checkbox</type>
</CustomField>