force-app/main/default/objects/Account/fields/Tech_Talend_Export__c.field-meta.xml
<CustomField>
    <fullName>Tech_Talend_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si cette case est cochée, le compte est à exporter par le Job de Talend. Cette case sera cochée par le workflow WF_ACC_TechTalendExport et décochée une fois le compte est exporté en Excel vers SI BW.</description>
    <label>Tech Talend Export</label>
    <type>Checkbox</type>
</CustomField>