force-app/main/default/objects/Account/fields/Technicien_titulaire__c.field-meta.xml
<CustomField>
    <fullName>Technicien_titulaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technicien titulaire</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>