force-app/main/default/objects/Account/fields/VAT_Declaration_Id__c.field-meta.xml
<CustomField>
    <fullName>VAT_Declaration_Id__c</fullName>
    <label>VAT Declaration Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>