force-app/main/default/objects/Account/recordTypes/CompteActif.recordType-meta.xml
<RecordType>
    <fullName>CompteActif</fullName>
    <active>true</active>
    <description>Ces comptes représentent l&apos;ensemble des comptes remontés par l&apos;ERP</description>
    <label>Compte Actif</label>
</RecordType>