force-app/main/default/objects/Account/recordTypes/CompteProspectOuPreClient.recordType-meta.xml
<RecordType>
    <fullName>CompteProspectOuPreClient</fullName>
    <active>true</active>
    <description>Ces comptes sont seulement de type &quot;Prospect&quot; et &quot;Pré client&quot;</description>
    <label>Compte Prospect ou pré client</label>
</RecordType>